Fix delayed elevation collapsing animation; no rounded corners (#66)
Probably due to differing height of container div because of inline
line-height.

--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,10 @@ footer {
     border-bottom: 1px dotted #818a91;
 }
 
-#elevation-chart {
-    height: 175px;
+.steelblue-theme.leaflet-control.elevation .background {
+    display: block;
     font-size: 80%;
+    border-radius: 0;
 }
 
 .form-group {
